Included Chrome window & Fixed some spacing issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,10 +5,6 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
-.sudo-page {
-	margin-top: 00px;
-}
-
 h1, h2, h3, h4, h5 {
 	color: #5d5c5c;
 }
@@ -32,12 +28,25 @@ img {
 }
 
 .navbar .brand {
-	padding-left: 70px;
+	margin-left: 0px;
 }
 
 .navbar .nav > li > a:focus, .navbar .nav > li > a:hover {
 	background-color: #E5E5E5;
 }
+
+.header {
+	width: 100%;
+	padding-top: 30px;
+	margin-bottom: -100px;
+}
+
+[class*="span"] {
+	margin-left: 0px;
+}
+
+
+
 
 // #chrome {
 // 	background-image: url('../images/chrome-bg.png');
